full application system implmentation with ui, incl. tweaks for colors and layout owner-side

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -19,10 +19,13 @@
   --accent-foreground: rgb(32, 32, 32);
   --destructive: rgb(229, 77, 46);
   --destructive-foreground: rgb(255, 255, 255);
+  --destructive-light: rgba(229, 77, 46, 0.1);
   --success: rgb(76, 175, 80);
   --success-foreground: rgb(255, 255, 255);
+  --success-light: rgba(76, 175, 80, 0.1);
   --warning: rgb(251, 191, 36);
-  --warning-foreground: rgb(88, 45, 29);
+  --warning-foreground: rgb(255, 255, 255);
+  --warning-light: rgba(251, 191, 36, 0.1);
   --border: rgb(216, 216, 216);
   --input: rgb(216, 216, 216);
   --ring: rgb(100, 74, 64);
@@ -72,10 +75,13 @@
   --accent-foreground: rgb(238, 238, 238);
   --destructive: rgb(229, 77, 46);
   --destructive-foreground: rgb(255, 255, 255);
+  --destructive-light: rgba(229, 77, 46, 0.1);
   --success: rgb(76, 175, 80);
   --success-foreground: rgb(255, 255, 255);
+  --success-light: rgba(76, 175, 80, 0.1);
   --warning: rgb(251, 191, 36);
-  --warning-foreground: rgb(32, 32, 32);
+  --warning-foreground: rgb(255, 255, 255);
+  --warning-light: rgba(251, 191, 36, 0.1);
   --border: rgb(32, 30, 24);
   --input: rgb(72, 72, 72);
   --ring: rgb(255, 224, 194);
@@ -123,10 +129,13 @@
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
   --color-destructive-foreground: var(--destructive-foreground);
+  --color-destructive-light: var(--destructive-light);
   --color-success: var(--success);
   --color-success-foreground: var(--success-foreground);
+  --color-success-light: var(--success-light);
   --color-warning: var(--warning);
   --color-warning-foreground: var(--warning-foreground);
+  --color-warning-light: var(--warning-light);
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
